--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://fonts.googleapis.com/css?family=Shippori Mincho' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@800&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Italiana' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css"> 
@@ -19,7 +21,7 @@
             <button>ABOUT US</button>
         </div>
     </div>
-    <div>
+    <div class="info-section">
         <h4>METRO MANILA</h4>
         <h1>Our Locations</h1>
         <p>Kimpura today boasts of its modern interiors, warmer and airy ambience, all conspired to suit every customer's discriminating and luxurious taste.</p>
